# mtasa-blue

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .travis.yml  0001-Fixed-a-weapon-desync-bug-glitch.patch  AGENTS.md  CHANGELOG  CONTRIBUTING.md  Dockerfile  Dockerfile.arm  Dockerfile.arm64  Dockerfile.armhf  Dockerfile.i386  Dockerfile.osx-arm64  Dockerfile.osx-x64  INSTALL  MAETRO.md  Makefile.am  PR_WEATHER_FLICKER_4803.md  PULL_REQUEST_TEMPLATE.md  README.md  appveyor.yml  azure-pipelines.yml  configure.ac  create-projects.bat  crowdin.yml  docker-build.bat  docker-build.sh  initial-install.sh  linux-build-arm.sh  linux-build.sh  linux-install-data.sh  mta-build.sh  mta-install.sh  mtasa-blue-clean-eVehicleTypes.rar  (+7 more)
MTA10_Server/core/: CCrashHandler.cpp  CCrashHandler.h  CCrashHandlerAPI.cpp  CCriticalSection.h  CDynamicLibrary.cpp  CDynamicLibrary.h  CModManagerImpl.cpp  CModManagerImpl.h  CServerImpl.cpp  CServerImpl.h  CThreadCommandQueue.cpp  CThreadCommandQueue.h  ErrorCodes.h  Makefile  Makefile.am  Server.cpp  StdInc.cpp  StdInc.h  _ServerCore 2005.vcproj  _ServerCore 2008.vcproj  _ServerCore 2008.vcxproj  _ServerCore.sln  _ServerCore.vcproj
MTA10_Server/core/sockets/: CTCPClientSocketImpl.cpp  CTCPClientSocketImpl.h  CTCPImpl.cpp  CTCPServerSocketImpl.h  CTCPServerSocketImplManager.cpp
MTA10_Server/launcher/: CDynamicLibrary.cpp  Main.cpp  Makefile  Makefile.am  _launcher 2005.sln  _launcher 2005.vcproj  _launcher 2008.sln  _launcher 2008.vcproj  _launcher 2008.vcxproj  _launcher 2008.vcxproj.filters  _launcher.vcproj  resource.h
MTA10_Server/mods/deathmatch/: CLuaAccountDefs.cpp  CServer.cpp  CServer.h  Config.h  Makefile.am  Server.cpp  Server.h  StdInc.h  _ServerDeathmatch 2005.vcproj  _ServerDeathmatch 2008.vcproj  _ServerDeathmatch 2008.vcxproj  _ServerDeathmatch 2008.vcxproj.filters  _ServerDeathmatch.vcproj  acl.xml  editor.conf  editor_acl.xml  gccHashSupport.h  local.conf  mtaserver.conf  vehiclecolors.conf
Shared/XML/: CXMLArray.cpp  CXMLArray.h  CXMLAttributeImpl.cpp  CXMLAttributeImpl.h  CXMLAttributesImpl.cpp  CXMLAttributesImpl.h  CXMLFileImpl.cpp  CXMLFileImpl.h  CXMLImpl.cpp  CXMLImpl.h  CXMLNodeImpl.cpp  CXMLNodeImpl.h  Makefile.am  StdInc.h  XML.cpp  _XML 2005.sln  _XML 2005.vcproj  _XML 2008.sln  _XML 2008.vcproj  _XML 2008.vcxproj  _XML.sln  _XML.vcproj  premake5.lua
Shared/XML/tinyxml/: tinyxml.cpp  tinyxml.h  tinyxmlparser.cpp
Shared/publicsdk/: CFunctions.cpp  CFunctions.h  CThread.cpp  CThread.h  CThreadData.cpp  CThreadData.h  Common.h  IModule.h  IModuleInterfaces.h  LICENSE  Makefile.am  README  ml_base.cpp  ml_base.h  ml_base.sln  ml_base.vcproj  premake5.lua
Shared/publicsdk/extra/: CLuaArgument.cpp  CLuaArgument.h  CLuaArguments.cpp  CLuaArguments.h
Shared/publicsdk/include/: ILuaModuleManager.h  lua.h  luaconf.h
Shared/publicsdk/lib/: lua5.1.exp  lua5.1.lib  lua5.1d.exp  lua5.1d.lib  lua5.1s.lib  lua5.1s_2008.lib  lua5.1sd.lib  lua5.1sd_2008.lib
branches/custom-train-tracks/: configure.ac
branches/custom-train-tracks/MTA10/: version.h
branches/custom-train-tracks/Shared/: Core 2008.sln
branches/custom-train-tracks/utils/: ArgStreamer.cs
dependencies/ehs/: Makefile.am  datum.cpp
irc/mantisbot/src/: Makefile.am  Makefile.in  autofix.cpp  commands.cpp  configuration.cpp  keys.cpp  main.cpp  mantisbot.cpp  tinystr.cpp  tinyxml.cpp
irc/rsl/: Changelog  config.guess  config.sub  configure  configure.ac  doxygen.m4  libtool  rsl.h
irc/rsl/autom4te.cache/: traces.0
irc/rsl/file/: Makefile.am  Makefile.in
irc/rsl/net/: Makefile.am  Makefile.in
irc/wikibot/src/: Makefile.am  Makefile.in  configuration.cpp  keys.cpp  main.cpp  mkpasswd.cpp  syntax.l  wikibot.cpp
trunk/: CHANGELOG  INSTALL  Makefile.am  README.md  configure.ac  initial-install.sh  mta-install.sh
trunk/MTA10/: version.h
trunk/MTA10/ceflauncher/: CCefApp.h
trunk/MTA10/core/: CAdditionalVertexStreamManager.cpp  CChat.cpp  CChat.h  CClientTime.cpp  CClientTime.h  CClientVariables.cpp  CClientVariables.h  CCommandFuncs.cpp  CCommandFuncs.h  CCommands.cpp  CCommands.h  CCommunity.cpp  CCommunity.h  CCommunityLogin.cpp  CCommunityRegistration.cpp  CCommunityRegistration.h  CCompressorJobQueue.cpp  CConnectManager.cpp  CConnectManager.h  CConsole.cpp  CConsole.h  CConsoleHistory.cpp  CConsoleHistory.h  CConsoleLogger.cpp  CConsoleLogger.h  CCore.cpp  CCore.h  CCrashDumpWriter.cpp  CCrashDumpWriter.h  CCredits.cpp  CCriticalSection.h  CDebugView.cpp  CDebugView.h  CDirect3DData.cpp  CDirect3DData.h  CDirect3DEvents9.cpp  CDirect3DHook9.cpp  CDirect3DHook9.h  CDirect3DHookManager.cpp  CDirect3DHookManager.h  (+131 more)
trunk/MTA10/game_sa/: C3DMarkerSA.cpp  C3DMarkerSA.h  C3DMarkersSA.cpp  CAERadioTrackManagerSA.cpp  CAERadioTrackManagerSA.h  CAnimBlendAssocGroupSA.h  CAnimBlendAssociationSA.cpp  CAnimBlendAssociationSA.h  CAnimBlendHierarchySA.cpp  CAnimBlendSequenceSA.cpp  CAnimBlendStaticAssociationSA.h  CAnimBlockSA.cpp  CAnimBlockSA.h  CAnimManagerSA.cpp  CAnimManagerSA.h  CAudioContainerLookupTableSA.cpp  CAudioContainerLookupTableSA.h  CAudioContainerSA.cpp  CAudioContainerSA.h  CAudioEngineSA.cpp  CAudioEngineSA.h  CAudioSA.cpp  CAutomobileSA.h  CBikeSA.cpp  CBmxSA.h  CBoatSA.cpp  CBoatSA.h  CBoundingBoxSA.h  CBuildingSA.cpp  CCamSA.cpp  CCamSA.h  CCameraSA.cpp  CCameraSA.h  CCarEnterExitSA.h  CCarGeneratorSA.cpp  CCarGeneratorSA.h  CCheckpointSA.cpp  CCheckpointSA.h  CCheckpointsSA.cpp  CCivilianPedSA.cpp  (+168 more)
trunk/MTA10/gui/: CGUIButton_Impl.cpp  CGUIButton_Impl.h  CGUICheckBox_Impl.cpp  CGUICheckBox_Impl.h  CGUIComboBox_Impl.cpp  CGUIComboBox_Impl.h  CGUIEdit_Impl.cpp  CGUIEdit_Impl.h  CGUIElement_Impl.cpp  CGUIElement_Impl.h  CGUIElement_Inc.h  CGUIFont_Impl.cpp  CGUIGridList_Impl.cpp  CGUIGridList_Impl.h  CGUILabel_Impl.h  (+36 more)
trunk/MTA10_Server/: version.h
trunk/Shared/: Core 2005.sln  Core 2008.sln  Core 2013.sln  Core.sln  MTAPropertySheet.props
trunk/utils/: build_gettext_catalog.py  fix_global_ignores.sh  fix_global_propsets.sh  nightly.py  pull_pootle_catalogs.py
(+17730 files in other folders)
