SUBDIRS=file net stream
lib_LTLIBRARIES=librsl.la
librsl_la_SOURCES=
librsl_la_LIBADD=file/librsl_file.la net/librsl_net.la
nobase_pkginclude_HEADERS=config.h file/ini/*.h \
				                   net/http/*.h net/irc/*.h net/socket/*.h stream/*.h

#include doxygen.am

#dist_man1_MANS = doxygen-doc

#MOSTLYCLEANFILES = $(DX_CLEANFILES)

